correcting spacing on links section
reduced spacing between useful links and links to other churches

--- a/style.css
+++ b/style.css
@@ -550,6 +550,10 @@ footer .container::after {
   }
 }
 
+.contactUs .contact-links ul {
+  margin-bottom: 0.5rem;
+}
+
 .contactUs .contact-links a {
   text-decoration: none;
   color: rgb(229,66,41);
